kubernetes/modules/docker-registry/manifests/docker-registry-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  namespace: docker-registry
  labels:
    app: docker-registry-ui
    service: docker-registry-ui
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: docker-registry-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-ui
  namespace: docker-registry
spec:
  selector:
    matchLabels:
      app: docker-registry-ui
  template:
    metadata:
      labels:
        app: docker-registry-ui
    spec:
      containers:
        - name: docker-registry-ui
          image: joxit/docker-registry-ui:static
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: tenlastic.com/low-priority
                    operator: Exists
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: docker-registry-ui
  namespace: docker-registry
spec:
  hosts:
    - docker-registry-ui.tenlastic.com
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  http:
    - route:
        - destination:
            host: docker-registry-ui
            port:
              number: 80
